feat: added redis integration
